new end point analysis_results/by_date_range
